chore: fix wrong mingw path

--- a/.github/workflows/xmake.yml
+++ b/.github/workflows/xmake.yml
@@ -26,7 +26,7 @@ jobs:
           base-devel
           mingw-w64-x86_64-toolchain
     - name: Configure XMake
-      run: xmake f -p mingw --mingw="C:\tmp_msys2\mingw64" -c --ldflags="-lws2_32 -lwsock32" -y
+      run: xmake f -p mingw --mingw=C:/tmp_msys2/mingw64 -c --ldflags="-lws2_32 -lwsock32" -y
     - name: Build
       run: xmake
     - name: Upload artifact
