chore: fix the wrong mingw path again

--- a/.github/workflows/xmake.yml
+++ b/.github/workflows/xmake.yml
@@ -28,7 +28,7 @@ jobs:
     - name: Output dir info for debug
       run: ls C:/tmp_msys2
     - name: Configure XMake
-      run: xmake f -p mingw --mingw=C:/tmp_msys2/mingw64 -c --ldflags="-lws2_32 -lwsock32" -y
+      run: xmake f -p mingw --mingw=C:/tmp_msys2/msys64/mingw64 -c --ldflags="-lws2_32 -lwsock32" -y
     - name: Build
       run: xmake
     - name: Upload artifact
