chore: add PATH in CI

--- a/.github/workflows/xmake.yml
+++ b/.github/workflows/xmake.yml
@@ -25,8 +25,10 @@ jobs:
           git
           base-devel
           mingw-w64-x86_64-toolchain
-    - name: Output dir info for debug
-      run: ls C:/tmp_msys2
+    - name: Configure PATH
+      run : |
+        Add-Content $env:GITHUB_PATH "C:\tmp_msys2\msys64\mingw64\bin"
+        Add-Content $env:GITHUB_PATH "C:\tmp_msys2\msys64\usr\bin"
     - name: Configure XMake
       run: xmake f -p mingw --mingw=C:/tmp_msys2/msys64/mingw64 -c --ldflags="-lws2_32 -lwsock32" -y
     - name: Build
