--- a/.github/workflows/xmake.yml
+++ b/.github/workflows/xmake.yml
@@ -64,7 +64,7 @@ jobs:
         with:
           xmake-version: latest
       - name: Build
-        run: xmake
+        run: xmake -y
       - name: Upload artifact
         uses: actions/upload-artifact@v2
         with:
@@ -74,4 +74,3 @@ jobs:
       - name: Test
         run:
           xmake run test
-          
