--- a/.github/workflows/xmake.yml
+++ b/.github/workflows/xmake.yml
@@ -12,31 +12,12 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
-      - name: Cache MSYS2
-        id: cache
-        uses: actions/cache@v3
-        with:
-          path: C:\tmp_msys2
-          key: ${{ runner.os }}-msys2
       - name: Set up XMake
         uses: xmake-io/github-action-setup-xmake@v1
         with:
           xmake-version: latest
-      - name: Set up MSYS2
-        uses: msys2/setup-msys2@v2
-        with:
-          msystem: MINGW64
-          location: C:\tmp_msys2
-          install: >-
-            git
-            base-devel
-            mingw-w64-x86_64-toolchain
-      - name: Configure PATH
-        run: |
-          Add-Content $env:GITHUB_PATH "C:\tmp_msys2\msys64\mingw64\bin"
-          Add-Content $env:GITHUB_PATH "C:\tmp_msys2\msys64\usr\bin"
-      - name: Configure XMake
-        run: xmake f -p mingw --mingw=C:/tmp_msys2/msys64/mingw64 -c --ldflags="-LC:\tmp_msys2\msys64\mingw64\lib -lws2_32 -lwsock32 -static" -y
+      - name: Set up MinGW
+        uses: egor-tensin/setup-mingw@v2
       - name: Upload log when Failure
         if: ${{ failure() }}
         uses: actions/upload-artifact@v2
@@ -45,7 +26,7 @@ jobs:
           path: |
             C:\Users\runneradmin\AppData\Local\.xmake\cache\packages\2304\r\range-v3\0.12.0\installdir.failed\logs\install.txt
       - name: Build
-        run: xmake
+        run: xmake -y
       - name: Upload artifact
         uses: actions/upload-artifact@v2
         with:
