--- a/.github/workflows/xmake.yml
+++ b/.github/workflows/xmake.yml
@@ -2,7 +2,7 @@ name: Build and Test
 
 on:
   push:
-    branches: ["main", "dev", "dev-huancheng", "dev-andy-ci"]
+    branches: ["main", "dev", "dev-huancheng"]
   pull_request:
     branches: ["main", "dev"]
 
@@ -20,7 +20,7 @@ jobs:
           xmake-version: latest
       - name: Build
         run: |
-          xmake f -p mingw --ldflags="-lws2_32" -y
+          xmake f -p mingw --ldflags="-lws2_32 -lwsock32" -y
           xmake
       - name: Upload artifact
         uses: actions/upload-artifact@v2
