chore(CI): use msys2

--- a/.github/workflows/xmake.yml
+++ b/.github/workflows/xmake.yml
@@ -12,25 +12,40 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
-      - name: Set up MinGW
-        uses: egor-tensin/setup-mingw@v2
+      - name: Cache MSYS2
+        id: cache
+        uses: actions/cache@v3
+        with:
+          path: C:\tmp_msys2
+          key: ${{ runner.os }}-msys2
       - name: Set up XMake
         uses: xmake-io/github-action-setup-xmake@v1
         with:
           xmake-version: latest
+      - name: Set up MSYS2
+        uses: msys2/setup-msys2@v2
+        with:
+          msystem: MINGW64
+          location: C:\tmp_msys2
+          install: >-
+            git
+            base-devel
+            mingw-w64-x86_64-toolchain
+      - name: Configure PATH
+        run: |
+          Add-Content $env:GITHUB_PATH "C:\tmp_msys2\msys64\mingw64\bin"
+          Add-Content $env:GITHUB_PATH "C:\tmp_msys2\msys64\usr\bin"
       - name: Build
         run: |
-          xmake f -p mingw --ldflags="-LC:\ProgramData\chocolatey\lib\mingw\tools\install\mingw64\lib -lws2_32 -lwsock32 -static" -y
-          xmake
+          xmake f -p mingw --mingw=C:/tmp_msys2/msys64/mingw64 -c --ldflags="-LC:\tmp_msys2\msys64\mingw64\lib -lws2_32 -lwsock32 -static" -y
+          xmake -y
       - name: Upload artifact
         uses: actions/upload-artifact@v3
         with:
           name: xmake-artifact
-          path:
-            build\mingw\x86_64\release\*.exe
+          path: build\mingw\x86_64\release\*.exe
       - name: Test
-        run:
-          xmake run test
+        run: xmake run test
   windows-msvc:
     runs-on: windows-latest
     steps:
@@ -48,8 +63,7 @@ jobs:
           path: |
             build\windows\x64\release\*.exe
       - name: Test
-        run:
-          xmake run test
+        run: xmake run test
   ubuntu-gcc:
     runs-on: ubuntu-latest
     steps:
@@ -67,5 +81,4 @@ jobs:
           path: |
             build/linux/x86_64/release/*
       - name: Test
-        run:
-          xmake run test
+        run: xmake run test
